update 4Mel2026 - initial mapping payment-consult